[package]
name = "here-server"
version = "0.1.0"
edition = "2021"
description = "鸿蒙 App「我在这里」的定位数据接收后端"
license = "MIT"

[dependencies]
axum = "0.8.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
surrealdb = { version = "3.1.5", features = ["kv-surrealkv"] }

[package.metadata.deb]
maintainer = "yinguobing"
extended-description = """\
鸿蒙 App「我在这里」的定位数据接收后端。
接收设备上报的 GPS 定位数据，支持 systemd 开机自启。"""
depends = ""
section = "net"
priority = "optional"
assets = [
    ["target/release/here-server", "usr/bin/here-server", "755"],
    ["target/release/here", "usr/bin/here", "755"],
    ["debian/here-server.service", "lib/systemd/system/here-server.service", "644"],
]
maintainer-scripts = "debian/"
